--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=PayRoll
+spring.datasource.url=jdbc:mysql://localhost:3306/Mydata
+spring.datasource.username=root
+spring.datasource.password=Sasanka@123
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
